Accept phrases instead of one word

--- a/test/testSimpleAjaxQuery.html
+++ b/test/testSimpleAjaxQuery.html
@@ -11,8 +11,8 @@
                 type: 'POST',
                 data: JSON.stringify({
                     words: [
-                        {'id': 'foo', 'text': 'cat'},
-                        {'id': 'bar', 'text': 'dog'}
+                        {'id': 'foo', 'text': 'a bottle of sand'},
+                        {'id': 'bar', 'text': 'big dog'}
                     ]
                 }),
                 dataType: 'html',
@@ -42,8 +42,8 @@
                 type: 'POST',
                 data: JSON.stringify({
                     words: [
-                        {'id': 'foo', 'text': 'cat'},
-                        {'id': 'bar', 'text': 'dog'}
+                        {'id': 'foo', 'text': 'a bottle of sand'},
+                        {'id': 'bar', 'text': 'big dog'}
                     ]
                 }),
                 dataType: 'html',
