update test set

--- a/test/testSimpleAjaxQuery.html
+++ b/test/testSimpleAjaxQuery.html
@@ -27,7 +27,7 @@
                 contentType: 'application/json;charset=UTF-8',
                 type: 'POST',
                 data: JSON.stringify({
-                    word: {'id': 'foo', 'text': 'cat'}
+                    word: {'id': 'foo', 'text': 'hat'}
                 }),
                 dataType: 'html',
                 success: function(json){
@@ -58,7 +58,7 @@
                 contentType: 'application/json;charset=UTF-8',
                 type: 'POST',
                 data: JSON.stringify({
-                    word: {'id': 'foo', 'text': 'cat'}
+                    word: {'id': 'foo', 'text': 'hat'}
                 }),
                 dataType: 'html',
                 success: function(json){
