Imposed number of item to consider to speed things up

--- a/test/testSimpleAjaxQuery.html
+++ b/test/testSimpleAjaxQuery.html
@@ -36,36 +36,36 @@
 
             // });
 
-            $.ajax({
-                url: 'http://wordsim.iis-dev.seas.harvard.edu/GloVe/similarity',
-                contentType: 'application/json;charset=UTF-8',
-                type: 'POST',
-                data: JSON.stringify({
-                    words: [
-                        {'id': 'foo', 'text': 'smile'},
-                        {'id': 'bar', 'text': 'big dog'}
-                    ]
-                }),
-                dataType: 'html',
-                success: function(json){
-                    $('#gloveSim').html(JSON.stringify(json));
-                }
+            // $.ajax({
+            //     url: 'http://wordsim.iis-dev.seas.harvard.edu/GloVe/similarity',
+            //     contentType: 'application/json;charset=UTF-8',
+            //     type: 'POST',
+            //     data: JSON.stringify({
+            //         words: [
+            //             {'id': 'foo', 'text': 'smile'},
+            //             {'id': 'bar', 'text': 'big dog'}
+            //         ]
+            //     }),
+            //     dataType: 'html',
+            //     success: function(json){
+            //         $('#gloveSim').html(JSON.stringify(json));
+            //     }
 
-            });
+            // });
 
-            $.ajax({
-                url: 'http://wordsim.iis-dev.seas.harvard.edu/GloVe/top15/weddingProp',
-                contentType: 'application/json;charset=UTF-8',
-                type: 'POST',
-                data: JSON.stringify({
-                    word: {'id': 'foo', 'text': 'hat'}
-                }),
-                dataType: 'html',
-                success: function(json){
-                    $('#gloveTop15').html(JSON.stringify(json));
-                }
+            // $.ajax({
+            //     url: 'http://wordsim.iis-dev.seas.harvard.edu/GloVe/top15/weddingProp',
+            //     contentType: 'application/json;charset=UTF-8',
+            //     type: 'POST',
+            //     data: JSON.stringify({
+            //         word: {'id': 'foo', 'text': 'hat'}
+            //     }),
+            //     dataType: 'html',
+            //     success: function(json){
+            //         $('#gloveTop15').html(JSON.stringify(json));
+            //     }
 
-            });
+            // });
             $.ajax({
                 url: 'http://127.0.0.1:5000/GloVe/simSet/weddingProp',
                 contentType: 'application/json;charset=UTF-8',
