--- a/test/testSimpleAjaxQuery.html
+++ b/test/testSimpleAjaxQuery.html
@@ -67,7 +67,7 @@
 
             // });
             $.ajax({
-                url: 'http://wordsim.iis-dev.seas.harvard.edu/GloVe/simSet/weddingProp',
+                url: 'http://127.0.0.1:5000/GloVe/simSet/weddingProp',
                 contentType: 'application/json;charset=UTF-8',
                 type: 'POST',
                 data: JSON.stringify({
